PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/NoForEachLoopAssignment.par
NoForEachLoopAssignment {
seq main() : Void {
   var [Int] test = init_List([2])

   for var Int element in test {
        element++
   }
   return
}
}